--- a/arch/arm/configs/perseus_i9300_defconfig
+++ b/arch/arm/configs/perseus_i9300_defconfig
@@ -19,7 +19,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_LOCKBREAK=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+# CONFIG_RWSEM_GENERIC_SPINLOCK is not set
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -37,7 +37,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="/usr/local/arm/arm-eabi-4.4.3/bin/arm-eabi-"
-CONFIG_LOCALVERSION="-Perseus-alpha34"
+CONFIG_LOCALVERSION="-Perseus-alpha36"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -360,6 +360,7 @@ CONFIG_ARCH_EXYNOS4=y
 # CONFIG_ARCH_EXYNOS5 is not set
 CONFIG_CPU_EXYNOS4212=y
 CONFIG_CPU_EXYNOS4412=y
+CONFIG_ABB_CONTROL=y
 # CONFIG_S5PV310_HI_ARMCLK_THAN_1_2GHZ is not set
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_EXYNOS4_PM=y
@@ -683,8 +684,8 @@ CONFIG_CMA=y
 # CONFIG_CMA_DEVELOPEMENT is not set
 CONFIG_CMA_BEST_FIT=y
 # CONFIG_DEBUG_VMALLOC is not set
-CONFIG_ALIGNMENT_TRAP=y
-# CONFIG_UACCESS_WITH_MEMCPY is not set
+# CONFIG_ALIGNMENT_TRAP is not set
+CONFIG_UACCESS_WITH_MEMCPY=y
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
@@ -1946,6 +1947,7 @@ CONFIG_IR_LIRC_CODEC=y
 # CONFIG_MEDIA_ATTACH is not set
 CONFIG_MEDIA_TUNER=y
 CONFIG_MEDIA_TUNER_CUSTOMISE=y
+CONFIG_EXYNOS_MEDIA_MONITOR=y
 
 #
 # Customize TV tuners
@@ -2454,7 +2456,7 @@ CONFIG_USB_ARCH_HAS_OHCI=y
 CONFIG_USB_ARCH_HAS_EHCI=y
 CONFIG_USB_ARCH_HAS_XHCI=y
 CONFIG_USB=y
-CONFIG_USB_DEBUG=y
+# CONFIG_USB_DEBUG is not set
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 
 #
@@ -2854,8 +2856,12 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
 # CONFIG_ZCACHE is not set
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_XVMALLOC=y
 CONFIG_ZRAM=y
+# CONFIG_ZRAM_LZO is not set
+CONFIG_ZRAM_SNAPPY=y
 CONFIG_ZRAM_FOR_ANDROID=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_LIRC_STAGING is not set
