--- a/arch/arm/configs/perseus_n7105_defconfig
+++ b/arch/arm/configs/perseus_n7105_defconfig
@@ -19,7 +19,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_LOCKBREAK=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+# CONFIG_RWSEM_GENERIC_SPINLOCK is not set
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -38,7 +38,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="/usr/local/arm/arm-eabi-4.4.3/bin/arm-eabi-"
-CONFIG_LOCALVERSION="-Perseus-alpha34"
+CONFIG_LOCALVERSION="-Perseus-alpha36"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -364,6 +364,7 @@ CONFIG_ARCH_EXYNOS4=y
 # CONFIG_ARCH_EXYNOS5 is not set
 CONFIG_CPU_EXYNOS4212=y
 CONFIG_CPU_EXYNOS4412=y
+CONFIG_ABB_CONTROL=y
 # CONFIG_S5PV310_HI_ARMCLK_THAN_1_2GHZ is not set
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_EXYNOS4_PM=y
@@ -664,8 +665,8 @@ CONFIG_CMA=y
 # CONFIG_CMA_DEVELOPEMENT is not set
 CONFIG_CMA_BEST_FIT=y
 CONFIG_FORCE_MAX_ZONEORDER=12
-CONFIG_ALIGNMENT_TRAP=y
-# CONFIG_UACCESS_WITH_MEMCPY is not set
+# CONFIG_ALIGNMENT_TRAP is not set
+CONFIG_UACCESS_WITH_MEMCPY=y
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
@@ -2364,7 +2365,7 @@ CONFIG_USB_ARCH_HAS_OHCI=y
 CONFIG_USB_ARCH_HAS_EHCI=y
 CONFIG_USB_ARCH_HAS_XHCI=y
 CONFIG_USB=y
-CONFIG_USB_DEBUG=y
+# CONFIG_USB_DEBUG is not set
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 
 #
@@ -2762,8 +2763,12 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_USB_SERIAL_QUATECH_USB2 is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_XVMALLOC=y
 CONFIG_ZRAM=y
+# CONFIG_ZRAM_LZO is not set
+CONFIG_ZRAM_SNAPPY=y
 CONFIG_ZRAM_FOR_ANDROID=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_LIRC_STAGING is not set
